# khalilcharfi.github.io

./: .env.example  .env.keys  .gitignore  ASSET_404_FIX.md  ASSET_404_FIX_SUMMARY.md  BUNDLE_OPTIMIZATION_PLAN.md  BUNDLE_OPTIMIZATION_SUMMARY.md  CI_COMMANDS_REFERENCE.md  CONTENT_MODE_README.md  CookieConsentBanner.tsx  DYNAMIC_PORTFOLIO_README.md  ENHANCED_FINGERPRINTING_README.md  ENHANCED_PRIVACY_CONTROLS.md  ErrorBoundary.tsx  GITHUB_ENV_GUIDE.md  GOOGLE_ANALYTICS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MOBILE_MENU_UX_IMPROVEMENTS.md  NO_JS_FALLBACK_GUIDE.md  NO_JS_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_README.md  PERSONAS_CONFIGURATION.md  PRIORITY_SECTIONS_DEFAULT_DISABLED.md  PRIVACY_ENHANCEMENTS_SUMMARY.md  PROFILE_PHOTO_IMPLEMENTATION.md  PROFILE_PHOTO_SUMMARY.md  QUICK_REFERENCE.md  REACT_HOOK_FIX.md  README.md  REFACTORING_SUMMARY.md  SECTION_CONFIG_SUMMARY.md  SECTION_RENDERING_IMPLEMENTATION.md  TESTING_NO_JS_FALLBACK.md  THEME_FLICKERING_FIX.md  VisitorTypeSelector.tsx  clear-sw-cache.js  comprehensive-clear.js  (+42 more)
.github/: .actrc  PAGES_SETUP.md  SECURITY_GUIDE.md  ULTRA_OPTIMIZATION_GUIDE.md  WORKFLOW_OPTIMIZATIONS.md  WORKFLOW_OVERVIEW.md  copilot-instructions.md
.storybook/: main.ts  preview-head.html  preview.ts
ar/: index.html
css/: style.css  tailwindcss.css
data/: ar.json  de.json  en.json  fr.json  redirect.json
de/: index.html
docs/: ACCESSIBILITY_TESTING_GUIDE.md  BUNDLE_OPTIMIZATION_IMPLEMENTATION.md  CI_HOOKS.md  (+48 more)
wasm-modules/: Cargo.toml
wasm-modules/src/: lib.rs
(+263 files in other folders)
