[package]
name = "portfolio-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Performance",
  "Navigator",
  "Screen",
  "AudioContext",
  "AnalyserNode",
  "GainNode",
  "OscillatorNode",
  "MediaDevices",
  "Location",
  "History",
  "Storage",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
]

[profile.release]
# Optimize for size and speed
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# Additional WASM optimizations
wasm-opt = ["-Os", "--enable-mutable-globals"]
